syntax = "proto3";

import "errors/v1/errors.proto";

package pings.v1;

message Ping {
  string ping_id = 1;
  string message = 2;
}

message GetPingRequest {
  string ping_id = 1;
}

message GetPingResponse {
  oneof response {
    Ping ok = 1;
    errors.v1.BasicError error = 2;
  }
}
